--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "license": "MIT",
   "dependencies": {
     "@electron-forge/cli": "^6.0.0-beta.61",
+    "bootstrap": "^5.0.0",
     "dotenv": "^10.0.0",
     "electron-reload": "^2.0.0-alpha.1",
     "electron-squirrel-startup": "^1.0.0",
+    "electron-store": "^8.0.1",
+    "lowdb": "^3.0.0",
     "mysql2": "^2.3.2"
   },
   "devDependencies": {
@@ -23,7 +26,10 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.61",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.61",
     "@electron-forge/maker-zip": "^6.0.0-beta.61",
-    "electron": "^15.3.0"
+    "autoprefixer": "^10.4.0",
+    "electron": "^15.3.0",
+    "postcss": "^8.3.11",
+    "postcss-loader": "4.2.0"
   },
   "config": {
     "forge": {
