--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
   "license": "MIT",
   "dependencies": {
     "@electron-forge/cli": "^6.0.0-beta.61",
-    "bootstrap": "^5.0.0",
     "dotenv": "^10.0.0",
+    "electron-packager": "^15.4.0",
     "electron-reload": "^2.0.0-alpha.1",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.0.1",
-    "lowdb": "^3.0.0",
     "mysql2": "^2.3.2"
   },
   "devDependencies": {
